# universe-simulator

./: .gitignore  Cargo.toml  README.md  roadmap.md
src/: eventhandling.rs  main.rs  transmission.rs
src/gui/: gui.rs  widgets.rs
src/rendering/: graphicbody.rs  graphichandler.rs
src/simulation/: simulation_thread.rs  spacebody.rs  transmission.rs  worldspace.rs
