[package]
name = "universe-sim"
version = "0.1.0"
authors = ["FeistyKit <eeveebeevee33@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sfml = "0.15.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "*"
rayon = "*"